# portfolio

./: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  README.md  db.sqlite3  docker-compose.yaml  fly.toml  pyproject.toml  requirements.txt
.ebextensions/: 01_packages.config  01_upgrade_pip.config  02_environment.config  django.config  launch-template.config
home/: admin.py  middleware.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_contact_project_category.py  0003_category_alter_contact_id_alter_project_id_and_more.py  0004_rename_title_project_name_remove_project_image_and_more.py  0005_category_tag_alter_category_id_alter_contact_id.py  0006_skillcategory_skill.py  0007_skillcategory_tag.py  0008_project_skills.py  0009_category_rank_project_rank_skillcategory_rank.py  0010_remove_project_technologies_used.py  0011_delete_contact.py
nginx/: nginx.conf
portfolio/: settings.py  urls.py
static/css/: normalize.css  style.css
static/js/: main.js
staticfiles/css/: style.css
staticfiles/js/: main.js
templates/: home.html
